--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "shadow-cljs": "2.11.7"
   },
   "dependencies": {
+    "clipboard": "^2.0.6",
     "d3": "^6.2.0",
     "react": "16.13.0",
     "react-dom": "16.13.0"
