--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,18 +8,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: DeLaGuardo/setup-clojure@master
       with:
         cli: '1.10.1'
     - name: Use Node.js
       uses: actions/setup-node@v1
+      with:
+        node-version: '14'
     - name: npm install
       run: npm install
     - name: Build
       run: npx shadow-cljs release :frontend
     - name: Deploy
-      uses: maxheld83/ghpages@v0.2.1
+      uses: maxheld83/ghpages@v0.3.0
       env:
         GH_PAT: ${{ secrets.GH_PAT }}
         BUILD_DIR: "public"
