--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "shadow-cljs": "2.11.7"
+    "autoprefixer": "^10.0.4",
+    "cssnano": "^4.1.10",
+    "postcss": "^8.1.10",
+    "postcss-cli": "^8.3.0",
+    "shadow-cljs": "2.11.7",
+    "tailwindcss": "^2.0.1"
   },
   "dependencies": {
     "clipboard": "^2.0.6",
