--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "clipboard": "^2.0.6",
-    "d3": "^6.2.0",
+    "d3": "^6.3.0",
+    "d3-sankey": "^0.12.3",
     "react": "16.13.0",
     "react-dom": "16.13.0"
   },
